syntax = "proto3";

option java_package = "com.some.kafaka.model.temperature";
option java_multiple_files = true;

option optimize_for = SPEED;

message TemperatureData {

    int32  value = 1;

}